--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <title>FTR</title>
+    <title>Boilerplate</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="container"></div>
